[project]
name = "urbanism-now-links"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools==7.0.1",
    "fastapi[standard]==0.132.0",
    "httpx==0.28.1",
    "instructor[litellm]==1.14.5",
    "litellm==1.81.14",
    "markitdown==0.0.1a3",
    "notion-client==2.3.0",
    "notion2md==2.9.0",
    "python-dotenv==1.0.1",
    "pydantic==2.12.5",
    "trafilatura==2.0.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.2",
]

[tool.ruff.lint]
select = [
    "W",  # pywarn
    "I",  # isort
]
