[project]
name = "urbanism-now-links"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=7.0.5",
    "fastapi[standard]>=0.135.2",
    "httpx==0.28.1",
    "instructor[litellm]==1.14.5",
    "markitdown[pdf,docx,pptx]==0.1.5",
    "notion-client==2.3.0",
    "notion2md==2.9.0",
    "python-dotenv>=1.2.2",
    "pydantic==2.12.5",
    "trafilatura==2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.ruff.lint]
select = [
    "W",  # pywarn
    "I",  # isort
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
